# synapse-admin-tui

./: Cargo.toml  README.md
src/: editable.rs  main.rs  state.rs  view.rs
src/backend/: mod.rs  synapse.rs
src/common/: editable.rs  mod.rs  prompt.rs
src/view/: home.rs  mod.rs  prompt.rs  users.rs
src/views/: home.rs  mod.rs  users.rs
