[package]
name = "synapse-admin-tui"
description = "A terminal admin panel for synapse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "*"
tui = {version = "0", default-features=false, features=["crossterm"]}
variant_count = "*"
clap = "3.0.0-beta.5"
reqwest = {version = "0", default-features=false, features=["blocking", "default-tls"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"